--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,7 +15,7 @@
 
 <h2>Who we are</h2>
 <p>This Blog Website is made by Chinmayee Sharma. This website is made for the purpose of the hands-on experience on HTML, CSS, JS,
-     Node.js, Express.js and EJS. In this website, the special focus is on the backend part. </p>
+     Node.js, Express.js, EJS and MongoDB(Mongoose). In this website, the special focus is on the backend part. </p>
 
 
 <%- include("partials/footer.ejs") %>
